# pinin-rs

./: Cargo.toml  README.md
benches/: minecraft.rs
src/: accelerator.rs  cache.rs  compressed.rs  dict_loader.rs  elements.rs  format.rs  keyboard.rs  lib.rs  pinin.rs  searcher.rs  unicode_utils.rs
