[package]
name = "pinin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"
lazy_static = "1"
smallvec = "1"
#moka = "0.9"

[dev-dependencies]
pretty_assertions = "1"
env_logger = "*"
log = "*"
measure_time = "*"